--- a/public/index.html
+++ b/public/index.html
@@ -387,7 +387,7 @@
 <button id="darkModeToggle" aria-label="Alternar modo escuro">Modo Escuro</button>
 
 <header>
-  <img src="C:\Users\vitor\OneDrive\Área de Trabalho\Portfolio\assets\perfil.jpg" alt="Foto de perfil de Vitor Ruan" tabindex="0" />
+  <img src="public/assets/perfil.jpg" alt="Foto de perfil de Vitor Ruan" tabindex="0" />
   <h1>Vitor Ruan</h1>
   <p>Desenvolvedor de Software & Consultor SAP HCM Jr | AMS Support</p>
   <nav class="social-links" aria-label="Redes sociais de Vitor Ruan">
@@ -429,7 +429,7 @@ Sou movido pela curiosidade, pela vontade de evoluir e por um desejo constante d
   <article class="project" tabindex="0">
     <h3>Projeto Carrinho Arduino</h3>
     <p>Projeto feito em grupo utilizando Arduino para a criação de um carrinho controlado por um app de celular.</p>
-    <img src="C:\Users\vitor\OneDrive\Área de Trabalho\Portfolio\assets\Carrinho.gif" alt="">
+    <img src="public/assets/Carrinho.gif" alt="">
   </article>
 
 </section>
