--- a/public/index.html
+++ b/public/index.html
@@ -429,7 +429,8 @@ Sou movido pela curiosidade, pela vontade de evoluir e por um desejo constante d
   <article class="project" tabindex="0">
     <h3>Projeto Carrinho Arduino</h3>
     <p>Projeto feito em grupo utilizando Arduino para a criação de um carrinho controlado por um app de celular.</p>
-    <img src="./assets/Carrinho.gif" alt="">
+    <img src="https://raw.githubusercontent.com/VitorRuan/PortVitor/main/public/assets/Carrinho.gif
+" alt="">
   </article>
 
 </section>
