--- a/public/index.html
+++ b/public/index.html
@@ -387,7 +387,8 @@
 <button id="darkModeToggle" aria-label="Alternar modo escuro">Modo Escuro</button>
 
 <header>
-  <img src="public/assets/perfil.jpg" alt="Foto de perfil de Vitor Ruan" tabindex="0" />
+  <img src="https://raw.githubusercontent.com/VitorRuan/PortVitor/main/public/assets/perfil.jpg
+" alt="Foto de perfil de Vitor Ruan" tabindex="0" />
   <h1>Vitor Ruan</h1>
   <p>Desenvolvedor de Software & Consultor SAP HCM Jr | AMS Support</p>
   <nav class="social-links" aria-label="Redes sociais de Vitor Ruan">
