--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,10 @@
 
   /* HEADER */
   header {
-    text-align: center;
-    padding-bottom: 40px;
-    animation: fadeInUp 1s ease forwards;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   header img {
