--- a/public/index.html
+++ b/public/index.html
@@ -49,11 +49,15 @@
   }
 
   header img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #2980b9;
+    margin-bottom: 20px;
+    box-shadow: 0 0 15px rgba(41, 128, 185, 0.5);
+    transition: transform 0.3s ease;
+  }
 
   header img:hover, header img:focus {
     transform: scale(1.05);
