--- a/public/index.html
+++ b/public/index.html
@@ -441,13 +441,19 @@ Sou movido pela curiosidade, pela vontade de evoluir e por um desejo constante d
   <h2>Experiência</h2>
 
   <article class="job" tabindex="0">
+    <h3>Gerente Administrativo - Oakberry</h3>
+    <span>2019 - 2022</span>
+    <p>Responsável pela gestão de um quiosque de açaí, realizando controle de fluxo de caixa (entradas e saídas), administração de documentos e supervisão da equipe de funcionários.</p>
+  </article>
+
+  <article class="job" tabindex="0">
     <h3>Consultor SAP HCM Trainee - Inetum</h3>
-    <span>2023 - 2024</span>
+    <span>2022 - 2024</span>
     <p>Atuação em projetos para clientes como EDP Brasil, Citrosuco e Vila Galé, focado em Administração de Pessoal e eSocial.</p>
   </article>
 
   <article class="job" tabindex="0">
-    <h3>Consultor SAP HCM - Jr - Capgemini</h3>
+    <h3>Consultor SAP HCM Jr | AMS Support - Capgemini</h3>
     <span>2025 - Presente</span>
     <p>Apoio como suporte de consultoria no módulo de HCM, atendendo chamados do ServiceNow e configurando o ambiente para os clientes..</p>
   </article>
