--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,13 @@
     margin-bottom: 30px;
   }
 
+  /* Centralizar a imagem do carrinho */
+.carrinho {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 12px;
+}
   .project h3 {
     color: #34495e;
     font-weight: 700;
@@ -407,32 +414,47 @@ Paralelamente, sigo me desenvolvendo como estudante de Desenvolvimento de Softwa
 Sou movido pela curiosidade, pela vontade de evoluir e por um desejo constante de aprender.</p>
 </section>
 
-<section id="skills" tabindex="0" aria-label="Habilidades técnicas">
+<section id="skills" tabindex="0" aria-label="Habilidades">
   <h2>Habilidades</h2>
+
+  <h3>Hard Skills</h3>
   <ul>
     <li>TypeScript</li>
     <li>Node.js</li>
-    <li>React</li>
     <li>MongoDB</li>
     <li>SAP HCM</li>
+    <li>SAP EnableNow</li>
+    <li>LSMW</li>
     <li>Docker</li>
+    <li>Scrum e Metodologias Ágeis</li>
+  </ul>
+
+  <h3>Soft Skills</h3>
+  <ul>
+    <li>Comunicação clara e eficaz</li>
+    <li>Trabalho em equipe</li>
+    <li>Resolução de problemas</li>
+    <li>Gestão de tempo</li>
+    <li>Adaptabilidade</li>
+    <li>Pensamento analítico</li>
   </ul>
 </section>
+
 
 <section id="projects" tabindex="0" aria-label="Projetos realizados">
   <h2>Projetos</h2>
 
   <article class="project" tabindex="0">
     <h3>Projeto Cadastro Professores</h3>
-    <p>Projeto feito em grupo desenvolvido com Node.js, TypeScript e MongoDB para gerenciamento de cadastro de professores.</p>
+    <p>Projeto desenvolvido em grupo com Node.js, TypeScript e MongoDB para gerenciamento de cadastro de professores.</p>
     <a href="https://github.com/proj-cadastro/projeto-cadastro-app" target="_blank" rel="noopener">Repositório GitHub</a>
   </article>
 
   <article class="project" tabindex="0">
     <h3>Projeto Carrinho Arduino</h3>
-    <p>Projeto feito em grupo utilizando Arduino para a criação de um carrinho controlado por um app de celular.</p>
-    <img src="https://raw.githubusercontent.com/VitorRuan/PortVitor/main/public/assets/Carrinho.gif
-" alt="">
+    <p>Projeto desenvolvido em grupo utilizando Arduino para a criação de um carrinho controlado por um app de celular.</p>
+    <div class="carrinho"><img src="https://raw.githubusercontent.com/VitorRuan/PortVitor/main/public/assets/Carrinho.gif
+" alt=""></div>
   </article>
 
 </section>
